--- a/assets/css/business-frontpage.css
+++ b/assets/css/business-frontpage.css
@@ -79,12 +79,15 @@ footer {
 }
 @media only screen and (max-width: 640px){
 
+    .tagline{
+        font-size: 20px;
+    }
     .business-header img{
-        float:left;
+        float:right;
         position:relative;
-        width:175px;
+        width:150px;
         height:100px;
-        top:35px;
+        top:0;
         
         
     }
