--- a/assets/css/business-frontpage.css
+++ b/assets/css/business-frontpage.css
@@ -82,8 +82,8 @@ footer {
 }
 @media only screen and (max-width: 600px){
 
-    .tagline{
-        font-size: 12px;
+    .business-header h1{
+        font-size: 15px;
     }
     .business-header img{
         float:right;
