--- a/assets/css/business-frontpage.css
+++ b/assets/css/business-frontpage.css
@@ -83,12 +83,15 @@ footer {
 @media only screen and (max-width: 600px){
 
     .business-header h1{
-        font-size: 15px;
+        font-size:23px;
+    }
+    .business-header p{
+        font-size: 18px;
     }
     .business-header img{
         float:right;
         position:absolute;
-        width:150px;
+        width:130px;
         height:100px;
         top:0;
         right:0;
