--- a/assets/css/business-frontpage.css
+++ b/assets/css/business-frontpage.css
@@ -83,15 +83,17 @@ footer {
 @media only screen and (max-width: 600px){
 
     .business-header h1{
-        font-size:23px;
+        font-size:25px;
+        float:left;
+        padding:3px;
     }
     .business-header p{
-        font-size: 18px;
+        font-size: 15px;
     }
     .business-header img{
         float:right;
         position:absolute;
-        width:130px;
+        width:135px;
         height:100px;
         top:0;
         right:0;
